--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@iconscout/react-unicons": "^2.0.2",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "sass": "^1.63.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
